# rag-doc-splitter

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  db.py  loggy.py  main.py  splitters.py  utils.py
