[tool.poetry]
name = "rag-doc-splitter"
version = "0.1.0"
description = ""
authors = ["Chaz Wilder <hello@chazwilder.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.7.2"
langchain = "^0.2.0"
llama-index = "^0.10.38"
pydantic = "^2.7.1"
openai = "^1.30.1"
semantic-text-splitter = "^0.13.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "FA102",
    "FA100",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "Q000",
    "W191",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
